dokuwiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dokuwiki-ingress
  namespace: wiki
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
  - host: wiki.192.168.50.240.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: dokuwiki-web
            servicePort: 80
---
